# lk

./: .gitattributes  .gitignore  .goreleaser.yml  .markdownlint.json  CHANGELOG.md  Cargo.toml  LANG.md  LANG_zh.md  Makefile  OPCODE.md  README.md  README.zh-CN.md  README_en.md  STATUS.md  ast.go  bench_test.go  build.py  go.mod  go.sum  handoff.md  main.go  plan-progress.md  plan.md  progress.md  repl.go  run.go  test.lk  test.lk.lkc  test2.lk
aot-runtime/: Cargo.toml
aot-runtime/src/: lib.rs
aot/codegen/: Cargo.toml
aot/codegen/examples/: demo.rs
aot/codegen/src/: clif.rs  lib.rs
api/: Cargo.toml  consts.go  lk_auxlib.go  lk_state.go  lk_vm.go  lua_auxlib.go  lua_state.go  lua_vm.go
api/examples/: embed.c
api/include/: lk.h
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: bundler.rs  bytecode_cache.rs  coverage.rs  diagnostic.rs  main.rs  main_test.rs  mem.rs  native_compile.rs  native_runtime.rs  paths.rs  pkg.rs  repl.rs  repl_completion.rs  repl_tui.rs  startup_trace.rs
cli/src/pkg/: key.rs  registry_server.rs  tests.rs
cli/tests/: aot_differential_test.rs  aot_fuzz_differential_test.rs  bytecode_cache_test.rs  clif_differential_test.rs  compile_cli_test.rs  examples_differential_test.rs  hybrid_compile_test.rs  lkb_cli_test.rs  lkrb_cli_test.rs  macro_origins_cli_test.rs  pkg_cli_test.rs  pkg_git_test.rs  proc_macro_dependency_cli_test.rs  sandbox_limits_test.rs  traceback_test.rs  type_system_cli_test.rs  vm_bytecode_differential_test.rs
completion/: Cargo.toml
completion/src/: lib.rs
core/: Cargo.toml
core/benches/: bc32_bench.rs  bc32_for_range_bench.rs  bc32_ic_mix_bench.rs  bc32_while_bench.rs  bench_main.rs  call_named_bench.rs  escape_regions.rs  index_ic_bench.rs  scripts_bench.rs  slots_bench.rs  vm_micro_bench.rs
core/examples/: dump_bc.rs  dump_lkm.rs  dump_loop.rs  fib_inner.rs  test_let.rs  val_size.rs
core/src/: compat.rs  lib.rs  llvm.rs  macro_system.rs  mem.rs  module.rs  operator.rs  package.rs  rt.rs  stmt.rs  syntax.rs  token.rs  typ.rs  val.rs  vm.rs
core/src/ast/: ast_test.rs  mod.rs  parser.rs
core/src/expr/: expr_impl.rs  expr_recover_test.rs  expr_test.rs  match_parsing_test.rs  match_test.rs  mod.rs  pattern_impl.rs  select_guard_parsing_test.rs
core/src/llvm/: backend.rs  callee_eval.rs  const_display.rs  diagnostics.rs  dynamic_containers.rs  encoding.rs  ir_text.rs  known_key.rs  map_mutate.rs  mod.rs  options.rs  output.rs  passes.rs  runtime.rs  scalar.rs  scalar_block_helpers.rs  scalar_blocks.rs  scalar_emit.rs  scalar_facts.rs  scalar_inline.rs  straightline_main.rs  straightline_value.rs  subfunction.rs  tests.rs
core/src/macro_system/: expansion.rs  follow.rs  hygiene.rs  hygiene_tests.rs  imports.rs  origin.rs  origin_tests.rs  proc_deps.rs  proc_function.rs  proc_output.rs  procedural.rs  runtime_anchor.rs  validation.rs  validation_tests.rs
core/src/op/: mod.rs  op_test.rs  ops.rs
core/src/operator/: operator_test.rs  syntax.rs
core/src/package/: registry.rs
core/src/perf/: mod.rs  scenarios.rs
core/src/resolve/: mod.rs  slots.rs  slots_test.rs
core/src/rt/: concurrency_test.rs  mod.rs  runtime.rs  unsupported.rs
core/src/stmt/: attribute_test.rs  destructuring_test.rs  function_test.rs  if_let_test.rs  import.rs  import_parse_test.rs  mod.rs  rust_function_test.rs  stmt_recover_test.rs  stmt_test.rs  while_let_test.rs
core/src/token/: error.rs  lexer.rs  token_test.rs
core/src/typ/: function_infer_test.rs  mod.rs  numeric.rs  or_pattern_binding_test.rs  type_checker.rs  type_checker_test.rs  type_system.rs  type_system_test.rs
core/src/util/: fast_map.rs  mod.rs
core/src/val/: de.rs  de_test.rs  legacy_registers.rs  meta_method_test.rs  methods.rs  mod.rs  runtime_bridge.rs  runtime_model.rs  val_test.rs
core/src/vm/: alloc.rs  analysis.rs  analysis_queries.rs  analysis_tests.rs  artifact.rs  artifact32.rs  bc32.rs  bytecode.rs  (+29 more)
ecosystem/tree-sitter-lk/: Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
lkrt/: Cargo.toml  build.rs
lkrt/src/: abi.rs  abi_conformance_test.rs  arith.rs  chan.rs  containers.rs  encoding.rs  host.rs  io.rs  lib.rs  lkdyn.rs  lklist.rs  lkmap.rs  lkset.rs  lkstr.rs  net.rs  panic.rs  state.rs  try_trampoline.c  vm_mirror.rs
llvm/: Cargo.toml
llvm/src/: lib.rs  llvm.rs  native_executable.rs
llvm/tests/: clif_mir_dump.rs  cranelift_e2e.rs
lsp/: Cargo.toml  README.md
lsp/src/: bench_test.rs  inlay_hint_test.rs  lib.rs  main.rs
lsp/tests/: document_symbols_hierarchy_test.rs  error_position_test.rs  integration_test.rs  perf_latency_test.rs  stdlib_completion_test.rs  type_diagnostic_test.rs  unknown_export_diagnostic_test.rs  unknown_module_diagnostic_test.rs
stdlib/: Cargo.toml  lib_basic.go  lib_coroutine.go  lib_http.go  lib_json.go  lib_list.go  lib_map.go  lib_math.go  lib_num.go  lib_os.go  lib_package.go  lib_rand.go  lib_re.go  lib_string.go  lib_sync.go  lib_table.go  lib_term.go  lib_utf8.go  str.go  utils.go
stdlib/common/: Cargo.toml
stdlib/macros/: Cargo.toml
stdlib/src/: bytes_test.rs  chan_semantics_test.rs  concurrency_chan.rs  concurrency_task.rs  datetime.rs  datetime_test.rs  gc_stress_test.rs  globals_test.rs  io.rs  io_file.rs  io_std.rs  iter.rs  json.rs  lib.rs  list.rs  list_test.rs  llvm_bridge.rs  map.rs  math.rs  math_test.rs  net_socket.rs  net_tcp.rs  net_udp.rs  os.rs  os_test.rs  resource.rs  runtime_native.rs  sched_test.rs  select_test.rs  slice.rs  spawn_test.rs  stdlib_modules_test.rs  stdlib_runtime_test.rs  stream.rs  stream_test.rs  string.rs  string_test.rs  tcp.rs  tcp_test.rs  time.rs  (+2 more)
stdlib/web/: Cargo.toml
tree-sitter-lkr/: .gitignore  Cargo.toml  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-lkr/bindings/: node.d.ts  node.js
tree-sitter-lkr/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
tree-sitter-lkr/src/: grammar.json  lib.c  node-types.json  parser.c  parser.h  scanner.c
values/: Cargo.toml
values/src/: lib.rs  numeric.rs  strings.rs  types.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+974 files in other folders)
