[workspace]
members = ["core", "cli", "stdlib", "lsp"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"
repository = "https://github.com/lollipopkit/lkr"
description = "A Rust-like scripting language written in Rust with LLVM backend"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0"
toml = "0"
once_cell = "1"
chrono = "0"
criterion = "0"
sanitize-filename = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
crossbeam = "0.8"
futures = "0.3"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
llvm-tools = "0.1"
