[workspace]
members = [
    "core",
    "cli",
    "stdlib",
    "stdlib/common",
    "stdlib/crates/bytes",
    "stdlib/crates/chan",
    "stdlib/crates/datetime",
    "stdlib/crates/io",
    "stdlib/crates/iter",
    "stdlib/crates/json",
    "stdlib/crates/list",
    "stdlib/crates/map",
    "stdlib/crates/math",
    "stdlib/crates/net",
    "stdlib/crates/os",
    "stdlib/crates/slice",
    "stdlib/crates/stream",
    "stdlib/crates/string",
    "stdlib/crates/task",
    "stdlib/crates/time",
    "stdlib/crates/toml",
    "stdlib/crates/yaml",
    "lkrt",
    "lsp",
    "tree-sitter-lk",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"
repository = "https://github.com/lollipopkit/lk"
description = "A Rust-like scripting language written in Rust with LLVM backend"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0"
toml = "1"
once_cell = "1"
chrono = "0"
sanitize-filename = "0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
crossbeam = "0.8"
futures = "0.3"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
llvm-tools = "0.1"
arcstr = { version = "1", features = ["serde"] }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
