[workspace]
members = [
    "core",
    "hal",
    "values",
    "cli",
    "completion",
    "aot/abi",
    "aot/mir",
    "aot/codegen",
    "aot/lower",
    "llvm",
    "stdlib",
    "stdlib/common",
    "stdlib/macros",
    "stdlib/web",
    "stdlib/crates/bytes",
    "stdlib/crates/chan",
    "stdlib/crates/datetime",
    "stdlib/crates/encoding",
    "stdlib/crates/env",
    "stdlib/crates/fs",
    "stdlib/crates/hash",
    "stdlib/crates/http",
    "stdlib/crates/io",
    "stdlib/crates/iter",
    "stdlib/crates/math",
    "stdlib/crates/net",
    "stdlib/crates/os",
    "stdlib/crates/path",
    "stdlib/crates/process",
    "stdlib/crates/random",
    "stdlib/crates/regex",
    "stdlib/crates/slice",
    "stdlib/crates/stream",
    "stdlib/crates/string",
    "stdlib/crates/task",
    "stdlib/crates/time",
    "stdlib/crates/uuid",
    "lkrt",
    "lsp",
    "ecosystem/tree-sitter-lk",
    "wasm",
]
exclude = ["ecosystem/zed-ext"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"
repository = "https://github.com/lollipopkit/lk"
description = "A Rust-like scripting language written in Rust with LLVM backend"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0"
toml = "1"
base64 = "0.22"
crc32fast = "1"
ed25519-dalek = "2"
hex = "0.4"
once_cell = "1"
chrono = "0"
sanitize-filename = "0"
rand = "0.9"
regex = "1"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
crossbeam = "0.8"
futures = "0.3"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
llvm-tools = "0.1"
arcstr = { version = "1", features = ["serde"] }
ureq = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[profile.release]
panic = "abort"
opt-level = 2
lto = "thin"
codegen-units = 16

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
