[package]
name = "lk-aot-runtime"
description = "Static runtime linked by LK AOT executables"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lk_aot_runtime"
crate-type = ["staticlib"]

[dependencies]
lk-core = { path = "../core", default-features = false, features = ["llvm", "aot-minimal-runtime"] }
lk-stdlib = { path = "../stdlib" }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
