[package]
name = "lk-cli"
description = "CLI for LK Language"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"
default-run = "lk"

[[bin]]
name = "lk"
path = "src/main.rs"

[package.metadata.cargo-bin]
default-run = "lk"

[features]
default = ["llvm"]
llvm = ["lk-core/llvm", "dep:lkrt", "dep:llvm-tools"]
vm-profile = ["lk-core/vm-profile"]

[dependencies]
lk-core = { path = "../core", default-features = false }
lk-completion = { path = "../completion" }
lk-stdlib = { path = "../stdlib" }
lkrt = { path = "../lkrt", optional = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
rustyline = "18"
tracing-subscriber = { workspace = true }
llvm-tools = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
