[package]
name = "lk-cli"
description = "CLI for LK Language"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"
default-run = "lk"

[[bin]]
name = "lk"
path = "src/main.rs"

[package.metadata.cargo-bin]
default-run = "lk"

[features]
default = ["llvm", "stdlib"]
llvm = ["dep:lk-llvm"]
stdlib = ["dep:lk-stdlib", "lk-completion/stdlib"]
vm-profile = ["lk-core/vm-profile"]

[dependencies]
lk-core = { path = "../core" }
lk-completion = { path = "../completion", default-features = false }
lk-llvm = { path = "../llvm", optional = true }
lk-stdlib = { path = "../stdlib", optional = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
reedline = "0.48"
nu-ansi-term = "0.50"
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
