[package]
name = "lk-completion"
description = "Shared completion engine for LK tooling"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
lk-core = { path = "../core" }
lk-stdlib = { path = "../stdlib" }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
