[package]
name = "lk-completion"
description = "Shared completion engine for LK tooling"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[features]
default = ["stdlib"]
stdlib = ["dep:lk-stdlib"]

[dependencies]
lk-core = { path = "../core", default-features = false }
lk-stdlib = { path = "../stdlib", optional = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
