[package]
name = "lk-core"
description = "Core library for LK"
version = "0.2.0"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lk_core"
crate-type = ["rlib", "staticlib"]

[features]
default = ["llvm", "async-runtime"]
async-runtime = ["dep:futures", "dep:tokio"]
llvm = ["dep:llvm-tools"]
vm-profile = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
llvm-tools = { workspace = true, optional = true }
rustc-hash = { version = "2" }
hashbrown = { version = "0.15", features = ["serde"] }
itoa = { version = "1" }
ryu = { version = "1" }
arcstr = { workspace = true, features = ["serde"] }
