[package]
name = "lk-core"
description = "Core library for LK"
version = "0.2.0"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lk_core"
crate-type = ["rlib", "staticlib"]

[features]
default = ["std", "async-runtime"]
# `std` gates the std-heavy, VM-core-independent modules (currently the
# `package` manager: Lk.toml/lock, git, filesystem). Disabling it is a step
# toward the no_std `lk-vm-core` split (plan M0.7/8): the VM core (token/ast/
# stmt/typ/vm/val/gc) does not depend on `package`, so it drops out cleanly.
std = ["dep:stacker"]
async-runtime = ["dep:futures", "dep:tokio"]
vm-profile = []

[dependencies]
lk-values = { path = "../values" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
rustc-hash = { version = "2", default-features = false }
# Segmented-stack growth for the recursive dispatch (rustc's own approach):
# deep LK recursion grows the stack instead of aborting. std-only.
stacker = { version = "0.1", optional = true }
hashbrown = { version = "0.15", features = ["serde"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
itoa = { version = "1" }
ryu = { version = "1" }
arcstr = { workspace = true, features = ["serde"] }
