[package]
name = "lkrt"
description = "Typed native runtime support for LK LLVM AOT binaries"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lkrt"
crate-type = ["rlib", "staticlib"]

[dependencies]
lk-aot-abi = { path = "../aot/abi" }
rustc-hash = { version = "2" }
hashbrown = { version = "0.15" }
# Same crate the stdlib datetime module uses, so native formatting/weekday
# results are byte-identical to the VM.
chrono = { workspace = true }

[dev-dependencies]
lk-core = { path = "../core" }
