[package]
name = "lk-llvm"
description = "LLVM backend for LK"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lk_llvm"

[dependencies]
lk-core = { path = "../core", default-features = false, features = ["async-runtime"] }
lk-stdlib = { path = "../stdlib" }
lk-aot-mir = { path = "../aot/mir" }
lk-aot-lower = { path = "../aot/lower" }
lk-aot-codegen = { path = "../aot/codegen" }
lkrt = { path = "../lkrt" }
anyhow = { workspace = true }
chrono = { workspace = true }
llvm-tools = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
lk-aot-abi = { path = "../aot/abi" }
