[package]
name = "lkr-lsp"
version = "0.2.0"
edition = "2021"
description = "Language Server Protocol implementation for LKR"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[[bin]]
name = "lkr-lsp"
path = "src/main.rs"

[dependencies]
lkr-core = { path = "../core" }
lkr-stdlib = { path = "../stdlib" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
url = "2.0"
anyhow = "1.0"
dashmap = { workspace = true }
ropey = "1"
twox-hash = "2"
once_cell = { workspace = true }
