[package]
name = "lk-lsp"
version = "0.2.0"
edition = "2021"
description = "Language Server Protocol implementation for LK"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[[bin]]
name = "lk-lsp"
path = "src/main.rs"

[dependencies]
lk-core = { path = "../core" }
lk-stdlib = { path = "../stdlib" }
tower-lsp = "0.20"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12"
url = "2.5"
anyhow = "1.0"
dashmap = { workspace = true }
ropey = "1"
twox-hash = "2"
once_cell = { workspace = true }
