[package]
name = "lk-stdlib"
description = "Standard library for LK"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lk_stdlib"
crate-type = ["rlib", "staticlib"]

[features]
default = []
llvm-bridge = []

[dependencies]
lk-core = { path = "../core", default-features = false }
anyhow = { workspace = true }
arcstr = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
