[package]
name = "lk-stdlib"
description = "Standard library for LK"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[lib]
name = "lk_stdlib"
crate-type = ["rlib", "staticlib"]

[features]
default = []

[dependencies]
lk-core = { path = "../core", default-features = false }
lk-stdlib-bytes = { path = "crates/bytes" }
lk-stdlib-chan = { path = "crates/chan" }
lk-stdlib-common = { path = "common" }
lk-stdlib-datetime = { path = "crates/datetime" }
lk-stdlib-encoding = { path = "crates/encoding" }
lk-stdlib-env = { path = "crates/env" }
lk-stdlib-fs = { path = "crates/fs" }
lk-stdlib-hash = { path = "crates/hash" }
lk-stdlib-http = { path = "crates/http" }
lk-stdlib-io = { path = "crates/io" }
lk-stdlib-iter = { path = "crates/iter" }
lk-stdlib-math = { path = "crates/math" }
lk-stdlib-net = { path = "crates/net" }
lk-stdlib-os = { path = "crates/os" }
lk-stdlib-path = { path = "crates/path" }
lk-stdlib-process = { path = "crates/process" }
lk-stdlib-random = { path = "crates/random" }
lk-stdlib-regex = { path = "crates/regex" }
lk-stdlib-sched = { path = "crates/sched" }
lk-stdlib-slice = { path = "crates/slice" }
lk-stdlib-stream = { path = "crates/stream" }
lk-stdlib-string = { path = "crates/string" }
lk-stdlib-task = { path = "crates/task" }
lk-stdlib-time = { path = "crates/time" }
lk-stdlib-uuid = { path = "crates/uuid" }
anyhow = { workspace = true }
arcstr = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
