[package]
name = "tree-sitter-lkr"
description = "LKR grammar for tree-sitter"
version = "0.1.0"
license = "Apache-2.0"
authors = ["lollipopkit <a@lpkt.cn>"]
keywords = ["incremental", "parsing", "lkr"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/lollipopkit/lkr/tree-sitter-lkr"
edition = "2021"
build = "bindings/rust/build.rs"
links = "tree_sitter_lkr"

[dependencies]
tree-sitter = "~0.24"

[build-dependencies]
cc = "1"

[lib]
path = "bindings/rust/lib.rs"

[dev-dependencies]
tree-sitter = { version = "~0.24" }