[package]
name = "lk-aot-codegen"
version = "0.1.0"
edition = "2024"

[lib]
name = "lk_aot_codegen"

[dependencies]
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
cranelift-object = "0.133.1"
lk-aot-abi = { path = "../abi" }
lk-aot-mir = { path = "../mir" }
target-lexicon = "0.13.5"

[dev-dependencies]
cranelift-jit = "0.133.1"
