[package]
name = "lk-stdlib-common"
description = "Shared runtime helpers for LK standard library modules"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
lk-core = { path = "../../core", default-features = false }
anyhow = { workspace = true }

