[package]
name = "lk-stdlib-bytes"
description = "LK standard library bytes module"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
lk-core = { path = "../../../core", default-features = false }
lk-stdlib-common = { path = "../../common" }
anyhow = { workspace = true }

