[package]
name = "lk-stdlib-hash"
description = "Hash module for LK"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
crc32fast = { workspace = true }
lk-core = { path = "../../../core", default-features = false }
lk-stdlib-bytes = { path = "../bytes" }
lk-stdlib-common = { path = "../../common" }
sha1 = { workspace = true }
sha2 = { workspace = true }
