[package]
name = "lk-stdlib-map"
description = "LK standard library map module"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
lk-core = { path = "../../../core", default-features = false }
lk-stdlib-common = { path = "../../common" }
lk-stdlib-string = { path = "../string" }
anyhow = { workspace = true }
