[package]
name = "lk-stdlib-math"
description = "LK standard library math module"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
lk-core = { path = "../../../core", default-features = false }
lk-stdlib-common = { path = "../../common" }
anyhow = { workspace = true }

