[package]
name = "lk-stdlib-path"
description = "Path module for LK"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
lk-core = { path = "../../../core", default-features = false }
lk-stdlib-common = { path = "../../common" }
