[package]
name = "lk-stdlib-task"
description = "LK standard library task module"
version = "0.1.3"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"

[dependencies]
lk-core = { path = "../../../core", default-features = false, features = ["async-runtime"] }
lk-stdlib-common = { path = "../../common" }
anyhow = { workspace = true }
tokio = { workspace = true }
